syntax = "proto3";

package api_proto;

import "google/protobuf/empty.proto";

service VillainController {
    rpc List(VillainListRequest) returns (stream Villain) {}
    rpc Create(Villain) returns (Villain) {}
    rpc Retrieve(VillainRetrieveRequest) returns (Villain) {}
    rpc Update(Villain) returns (Villain) {}
    rpc Destroy(Villain) returns (google.protobuf.Empty) {}
}

message Villain {
    string nombre = 1;
    google.protobuf.Timestamp fecha_ingreso = 2;
}

message VillainListRequest {
}

message VillainRetrieveRequest {
    int64 id = 1;
}
